# Hackathon-Idea.Code.Release

./: .env-example  .gitattributes  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
database/: Dockerfile  create_script.sql  create_user.sql  docker-compose.yml  migration.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/Components/: AnketMainBox.vue  AuthBox.vue  AuthLine.vue  Filter.vue  Footer.vue  GenderChoice.vue  HaveHomeAnket.vue  Header.vue  NoHomeAnket.vue  PersonMatch.vue  PrfileHaveHome.vue  (+6 more)
model_orchestrator/: Dockerfile  app.py  requirements.txt  schemas.py
model_orchestrator/user-ranking/: config.json
olap/: Dockerfile  config.xml  docker-compose.yml  init.sql
project/: Dockerfile  auth.py  chat.py  clickhouse_database.py  config.py  database.py  main.py  postgres_database.py  requirements.txt
project/clickhouse/: __init__.py  analytics.py
project/db/: __init__.py  connections.py  models.py  queries.py
project/models/: __init__.py  education.py  interection.py  location.py  misc.py  user.py
project/postgres/: geography.py  matching.py
project/templates/: chat.html
project/utils/: __init__.py  chat.py  image_save.py  logger.py  schemas.py
redis/: Dockerfile  redis.conf
test/: test_clickhouse.py  test_orm.py  test_postgres_orm.py
test_chat/app/: auth.py  chat.py  database.py  main.py  models.py  schemas.py  ws_manager.py
test_chat/frontend/: app.js  index.html  styles.css
triton_inference/: Dockerfile
(+30 files in other folders)
